# sowa-radio

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back  INFO.md  LICENSE  README.md  ROADMAP.md  sdkconfig  structure.txt
common/hw_init/: hw_init.h
common/hw_init/lcd/: lcd_init_rgb.c
design/: radio_ui_v5.html
main/: CMakeLists.txt  CMakeLists_old.txt  idf_component.yml.back  main.c
main/fonts/: font_roboto_light_15.c  font_roboto_light_15.h  font_roboto_medium_16.c  font_roboto_medium_16.h  font_seven_segment_96.c  font_seven_segment_96.h
main/ui/: ui.c  ui.h  ui_main.c  ui_main.h  ui_settings.c  ui_settings.h  ui_spectrum.c  ui_spectrum.h  ui_stations.c  ui_stations.h  ui_theme.h
